Correct pressure container overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -21,7 +21,7 @@ body {
   border-radius: 10px;
   box-shadow: 7px 7px 15px 2px rgba(101,149,187,0.8);
   font-weight: 500;
-  background: rosybrown;
+  background: #04042C;
   text-align: center;
 }
 
@@ -49,32 +49,31 @@ body {
   margin-bottom: 10px;
   border-radius: 10px 10px 0 0;
   padding: 30px 10px 15px 10px;
-  /* background: rgba(255, 255, 255, 0.5); */
   color: #fff;
 }
 
 .rainy {
-  background: rgba(0, 0, 0, 0.8) url('../images/rainy.jpg') center/cover no-repeat;
+  background: rgba(4, 20, 68, 0.8) url('../images/rainy.jpg') center/cover no-repeat;
   background-blend-mode: overlay;
 }
 
 .cloudy {
-  background: rgba(0, 0, 0, 0.8) url('../images/cloudy.jpg') center/cover no-repeat;
+  background:rgba(4, 20, 68, 0.8) url('../images/cloudy.jpg') center/cover no-repeat;
   background-blend-mode: overlay;
 }
 
 .snowy {
-  background: rgba(0, 0, 0, 0.8) url('../images/snowy.jpg') center/cover no-repeat;
+  background: rgba(4, 20, 68, 0.8) url('../images/snowy.jpg') center/cover no-repeat;
   background-blend-mode: overlay;
 }
 
 .foggy {
-  background: rgba(0, 0, 0, 0.8) url('../images/foggy.jpg') center/cover no-repeat;
+  background: rgba(4, 20, 68, 0.8) url('../images/foggy.jpg') center/cover no-repeat;
   background-blend-mode: overlay;
 }
 
 .clear {
-  background: rgba(0, 0, 0, 0.8) url('../images/clear.jpg') center/cover no-repeat;
+  background: rgba(4, 20, 68, 0.8) url('../images/clear.jpg') center/cover no-repeat;
   background-blend-mode: overlay;
 }
 
@@ -94,14 +93,14 @@ body {
   margin-bottom: 10px;
   font-size: 25px;
   font-weight: 600;
-  text-shadow: 0 2px rgba(73, 57, 44, 0.2);
+  text-shadow: 0 3px rgba(73, 57, 44, 0.2);
 }
 
 .current-weather-temp  {
   margin-bottom: 10px;
   font-size: 50px;
   font-weight: 600;
-  text-shadow: 1px 4px rgba(73, 57, 44, 0.5);
+  text-shadow: 1px 5px rgba(73, 57, 44, 0.5);
 }
 
 .temp-min::after {
@@ -115,13 +114,18 @@ body {
   margin-bottom: 7px;
 }
 
+.icon-one {
+  margin-bottom: 5px;
+  object-fit: contain;
+}
+
 .description {
   margin-bottom: 15px;
   font-size: 20px;
   font-weight: 600;
   font-style: italic;
   text-transform: uppercase;
-  text-shadow: 0 2px rgba(73, 57, 44, 0.2);
+  text-shadow: 0 3px rgba(73, 57, 44, 0.2);
 }
 
 .measurement-details {
@@ -133,6 +137,10 @@ body {
   flex-direction: column;
   flex: 1;
   padding: 0 10px;
+}
+
+.measurement-detail span:last-child {
+  font-size: 14px;
 }
 
 .forecast {
